--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,23 @@
 {
-	"name": "sunnysideup/thickbox",
-	"type": "silverstripe-module",
-	"description": "add the jQuery Thickbox Library to your silverstripe application.",
-	"homepage": "http://www.silverstripe-webdevelopment.com",
-	"keywords": ["thickbox", "silverstripe"],
-	"license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
-	"authors":[
-		{
-			"name": "Nicolaas Francken",
-			"homepage": "https://github.com/sunnysideup",
-			"email" : "modules@sunnysideup.co.nz",
-			"role" : "lead developer"
-		}
-	],
-	"require":{
-		"silverstripe/framework": "~2.4"
-	},
-	"extra": {
-		"installer-name": "thickbox"
-	}
+    "name": "sunnysideup/thickbox",
+    "type": "silverstripe-module",
+    "description": "add the jQuery Thickbox Library to your silverstripe application.",
+    "keywords": [
+        "thickbox",
+        "silverstripe"
+    ],
+    "license": "Sunny Side Up (BSD-3-Clause and CUSTOM)",
+    "authors": [
+        {
+            "name": "Nicolaas Francken",
+            "email": "modules@sunnysideup.co.nz",
+            "role": "lead developer"
+        }
+    ],
+    "require": {
+        "silverstripe/framework": "~2.4"
+    },
+    "extra": {
+        "installer-name": "thickbox"
+    }
 }
